messagng section added

--- a/src/containers/Messenger/Messenger.module.css
+++ b/src/containers/Messenger/Messenger.module.css
@@ -1,8 +1,11 @@
+.chatComponent{
+    display: flex;
+}
+
 .sidebar{
     border-top: .2rem solid #ececec ;
     width: 30%;
     display: inline-block;
-
 }
 
 .messagingSection{
