--- a/src/components/UI/SidebarItem/SidebarItem.module.css
+++ b/src/components/UI/SidebarItem/SidebarItem.module.css
@@ -6,6 +6,7 @@
     font-size: 1rem;
     padding: .8rem 1rem;
     border-bottom: .2rem solid #ececec;
+    border-right: .2rem solid #ececec;
     cursor: pointer;
 }
 
