--- a/src/components/Message/Message.module.css
+++ b/src/components/Message/Message.module.css
@@ -1,30 +1,30 @@
-.textDiv{
-    color: #fff;
-    font-size: 1rem;
-    display: flex;
-    padding: .5rem 1rem .5rem 1rem;
+.textDiv {
+  color: #fff;
+  font-size: 1rem;
+  display: flex;
+  padding: 0.5rem 1rem 0.5rem 1rem;
 }
 
-.myTextDiv{
-    justify-content: flex-end;
+.myTextDiv {
+  justify-content: flex-end;
 }
 
-.notMyTextDiv{
-    justify-content: flex-start;
+.notMyTextDiv {
+  justify-content: flex-start;
 }
 
-.text{
-    border-radius: .8rem ;
-    padding: 0rem 0.4rem;
-    max-width: 60%;
+.text {
+  border-radius: 0.8rem;
+  padding: 0rem 0.4rem;
+  max-width: 60%;
 }
 
-.myText{
-    background-color: #787878;
-    border: .3rem solid #787878;
-}   
+.myText {
+  background-color: #787878;
+  border: 0.3rem solid #787878;
+}
 
-.notMyText{
-    background-color: #009578;
-    border: .3rem solid #009578;;
+.notMyText {
+  background-color: #009578;
+  border: 0.3rem solid #009578;
 }
