--- a/src/components/UI/ChatInputField/ChatInputField.module.css
+++ b/src/components/UI/ChatInputField/ChatInputField.module.css
@@ -1,14 +1,14 @@
-.inputSection{
-    display: flex;
-    align-items: center;
-    padding: 0rem 0rem 0rem 1rem;
+.inputSection {
+  display: flex;
+  align-items: center;
+  padding: 0rem 0rem 0rem 1rem;
 }
 
-.inputField{
-    border: .1rem solid #eeeeee;
-    border-radius: .8rem;
-    padding: .5rem .5rem .5rem 1.5rem;
-    font-size: .8rem;
-    width: 80%;
-    outline: none;
+.inputField {
+  border: 0.1rem solid #eeeeee;
+  border-radius: 0.8rem;
+  padding: 0.5rem 0.5rem 0.5rem 1.5rem;
+  font-size: 0.8rem;
+  width: 80%;
+  outline: none;
 }
