--- a/src/components/UI/SidebarItem/SidebarItem.module.css
+++ b/src/components/UI/SidebarItem/SidebarItem.module.css
@@ -1,20 +1,20 @@
 .contactName {
-    display: flex;
-    align-items: center;
-    color: #009578;
-    font-weight: bold;
-    font-size: 1rem;
-    padding: .8rem 1rem;
-    border-bottom: .2rem solid #ececec;
-    border-right: .2rem solid #ececec;
-    cursor: pointer;
+  display: flex;
+  align-items: center;
+  color: #009578;
+  font-weight: bold;
+  font-size: 1rem;
+  padding: 0.8rem 1rem;
+  border-bottom: 0.2rem solid #ececec;
+  border-right: 0.2rem solid #ececec;
+  cursor: pointer;
 }
 
 .contactName:active {
-    color: #02624f;
-    transform: scale(0.98);
+  color: #02624f;
+  transform: scale(0.98);
 }
 
 .contactName:hover {
-    background: #eeeeee;
+  background: #eeeeee;
 }
