sidebar and chat with two scrollbars added

--- a/src/components/ErrorMessage/ErrorMessage.module.css
+++ b/src/components/ErrorMessage/ErrorMessage.module.css
@@ -1,4 +1,4 @@
-.alertItemAuth {
+.alertItem {
   z-index: 0;
   position: fixed;
   top: 80%;
@@ -13,7 +13,12 @@
   color: #b32f2d;
 }
 
-.inactiveAuth {
+.warning {
+  background: #f8f3d6;
+  color: #967132;
+}
+
+.inactive {
   z-index: 0;
   position: fixed;
   top: 80%;
@@ -52,7 +57,7 @@
 }
 
 @media (max-width: 625px) {
-  .alertItemAuth {
+  .alertItem {
     left: 50%;
   }
 }
@@ -64,7 +69,7 @@
 }
 
 @media (max-width: 400px) {
-  .alertItemAuth {
+  .alertItem {
     width: 55%;
   }
 
