--- a/src/containers/Messenger/Messenger.module.css
+++ b/src/containers/Messenger/Messenger.module.css
@@ -19,7 +19,7 @@
   font-size: 2rem;
   text-align: center;
   left: 30%;
-  bottom: 5%;
+  /* bottom: 5%; */
   position: absolute;
   height: 100vh;
   /* display: flex;
@@ -29,8 +29,9 @@
 .messagingSectionMessages{
       border: 1px solid red;
       /* margin-bottom: 20rem; */
-      margin-top: 2rem;
-      height: 85%;
+      /* margin-top: 3rem; */
+      /* top: 10%; */
+      height: 78%;
       overflow-y: scroll;
       
       /* margin-bottom: 1rem; */
