My Profile component added

--- a/src/components/UI/SidebarItem/SidebarItem.module.css
+++ b/src/components/UI/SidebarItem/SidebarItem.module.css
@@ -18,3 +18,8 @@
 .contactName:hover {
   background: #eeeeee;
 }
+
+.selectedChat, .selectedChat:hover{
+  background-color:  #009578;
+  color: #ffffff;
+}
