--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -1,11 +1,14 @@
 .navbar{
      height: 8%; 
-    border: 2px solid blue;
     display: flex;
     justify-content: flex-end;
     align-items: center;
     font-size: 1rem;
+    border-bottom: 0.2rem solid #ececec;
+}
 
+.navbarMyProfile{
+    border-bottom: transparent;
 }
 
 .myProfile{
@@ -27,9 +30,8 @@ transform: scale(0.98);
 }
 
 .logout{
-    border: 5px solid blue;
     color:  #787878;
-    font-size: 3rem;
+    font-size: 2.5rem;
     margin-right: 2rem;
     margin-left: 1rem;
     cursor: pointer;
@@ -38,6 +40,8 @@ transform: scale(0.98);
 .logout:active, .logout:hover{
     color: #494949;
 }
+
+a{text-decoration: none; color: #ffffff;}
 
 
 
