--- a/src/components/UI/ChatInputField/ChatInputField.module.css
+++ b/src/components/UI/ChatInputField/ChatInputField.module.css
@@ -16,3 +16,20 @@
   width: 75%;
   outline: none;
 }
+
+.sendButton {
+  margin-left: 1rem;
+  color: #787878;;
+  font-size: 1.5rem;
+  cursor: pointer;
+  border: transparent;
+  border-radius: 50%;
+}
+
+.sendButton:hover {
+  color: #494949;
+}
+
+.sendButton:active {
+  transform: scale(0.98);
+}
