--- a/src/components/ErrorMessage/ErrorMessage.module.css
+++ b/src/components/ErrorMessage/ErrorMessage.module.css
@@ -1,4 +1,4 @@
-.alertItem {
+.alertItemLogin {
   z-index: 0;
   position: fixed;
   top: 80%;
@@ -18,7 +18,7 @@
   color: #967132;
 }
 
-.inactive {
+.inactiveLogin {
   z-index: 0;
   position: fixed;
   top: 80%;
@@ -30,6 +30,42 @@
   border-radius: 0.1rem;
   transition: all 0.2s ease;
 }
+
+.alertItemSendingMessage {
+  position: fixed;
+  top: 85%;
+  left: 45%;
+  width: 9rem;
+  padding-top: 0.4rem;
+  text-align: center;
+  height: 2rem;
+  font-size: 0.8rem;
+  font-weight: 600;
+  background-color: #b32f2d;
+  color: #ffffff;
+  border-radius: 0.8rem;
+  opacity: 1;
+  transition: all .5s ease;
+}
+
+.inactiveAlertItemSendingMessage {
+  position: fixed;
+  top: 85%;
+  left: 45%;
+  width: 9rem;
+  padding-top: 0.4rem;
+  text-align: center;
+  height: 2rem;
+  font-size: 0.8rem;
+  font-weight: 600;
+  background-color: #b32f2d;
+  color: #ffffff;
+  border-radius: 0.8rem;
+  opacity: 0;
+  transition: all .5s ease;
+  visibility: hidden;
+}
+
 
 .data {
   font-size: 1.1rem;
