--- a/src/components/UI/ChatInputField/ChatInputField.module.css
+++ b/src/components/UI/ChatInputField/ChatInputField.module.css
@@ -1,19 +1,20 @@
 .inputSection {
   display: flex;
   align-items: center;
-  padding: 1rem 0rem 1rem 1rem;
+  padding: .5rem 0rem .5rem .5rem;
   position: fixed;
   bottom: 0%;
-  width: 80%;
+  width: 70%;
   background-color: #ffffff;
+  border: 2px solid blue;
 }
 
 .inputField {
   border: 0.1rem solid #eeeeee;
   border-radius: 0.8rem;
-  padding: 0.5rem 0.5rem 0.5rem 1.5rem; 
+  padding: 0.5rem 0.5rem 0.5rem .8rem; 
   font-size: 0.8rem;
-  width: 75%;
+  width: 90%;
   outline: none;
 }
 
