--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -50,4 +50,12 @@ a{text-decoration: none; color: #ffffff;}
 }
 
 
+@media (max-width: 750px) {
+    .mobileDevice{
+        display: none
+    }
+    
+
+  }
+
 
