--- a/src/containers/Messenger/Messenger.module.css
+++ b/src/containers/Messenger/Messenger.module.css
@@ -3,8 +3,7 @@
 }
 
 .sidebar {
-  border-top: 0.2rem solid #ececec;
-  width: 20%;
+  width: 25%;
   position: fixed;
   height: 100vh;
   top: 0%;
@@ -13,10 +12,10 @@
 
 
 .messagingSection {
-  width: 80%;
+  width: 75%;
   font-size: 2rem;
   text-align: center;
-  left: 20%;
+  left: 25%;
   position: absolute;
   height: 100vh;
 }
@@ -27,13 +26,16 @@
       overflow-y: scroll;
 }
 
-@media (max-width: 500px) {
+.navbarOfSidbarForMobile{
+  display: none;
+}
+
+@media (max-width: 750px) {
   .sidebarPhoneNone {
     display: none;
   }
 
   .sidebarPhoneDisplay {
-    top: 8%;
     width: 100%;
     height: 100vh;
     position: absolute;
@@ -51,6 +53,10 @@
 }
   .messagingSectionPhoneNone {
 display: none;
+  }
+
+  .navbarOfSidbarForMobile{
+    display: block;
   }
 
 
