React state update on an unmounted component fixed

--- a/src/containers/Messenger/Messenger.module.css
+++ b/src/containers/Messenger/Messenger.module.css
@@ -30,6 +30,12 @@
   display: none;
 }
 
+.loadingChatsError{
+  display: flex;
+  justify-content: center;
+  margin-top: 10%;
+}
+
 @media (max-width: 750px) {
   .sidebarPhoneNone {
     display: none;
