--- a/src/components/ErrorMessage/ErrorMessage.module.css
+++ b/src/components/ErrorMessage/ErrorMessage.module.css
@@ -1,21 +1,30 @@
 .alertItemLogin {
   z-index: 0;
-  position: fixed;
-  top: 80%;
-  left: 70%;
-  transform: translate(-50%, -50%);
-  display: flex;
+  /* display: flex; */
   align-items: center;
-  padding: 0.4rem 1rem;
+  padding: 1rem 2rem;
   border-radius: 0.1rem;
   transition: all 0.2s ease;
   background: #ecc8c5;
   color: #b32f2d;
+  text-align: center;
 }
 
 .warning {
+  position: fixed;
+  transform: translate(-50%, -50%);
+  top: 80%;
+  left: 70%; 
   background: #f8f3d6;
   color: #967132;
+}
+
+.alertItemLoginError{
+  position: relative;
+  width: 40%;
+  top: 20%;
+  /* top: 80%;
+  left: 70%;  */
 }
 
 .inactiveLogin {
@@ -32,9 +41,8 @@
 }
 
 .alertItemSendingMessage {
-  position: fixed;
-  top: 85%;
-  left: 45%;
+  position: relative;
+  margin: 0 auto;
   width: 9rem;
   padding-top: 0.4rem;
   text-align: center;
@@ -49,9 +57,8 @@
 }
 
 .inactiveAlertItemSendingMessage {
-  position: fixed;
-  top: 85%;
-  left: 45%;
+  position: relative;
+  margin: 0 auto;
   width: 9rem;
   padding-top: 0.4rem;
   text-align: center;
@@ -82,35 +89,22 @@
 
 .close {
   cursor: pointer;
-  position: relative;
-  top: -0.8rem;
-  left: 0.4rem;
-  font-size: 1.4rem;
+  position: absolute;
+  top: .5rem;
+  right: 1rem;
+  font-size: 1.6rem;
 }
 
 .close:hover {
   color: #ce837d;
 }
 
-@media (max-width: 625px) {
-  .alertItem {
-    left: 50%;
-  }
-}
-
-@media (max-width: 420px) {
-  .close {
-    top: -1rem;
-  }
-}
-
-@media (max-width: 400px) {
-  .alertItem {
-    width: 55%;
+ @media (max-width: 800px) {
+  .alertItemLoginError{
+    width: 80%;
   }
 
-  .close {
-    top: -1rem;
-    left: 0.5rem;
+  .alertItemLogin{
+    padding: 1rem .5rem;
   }
-}
+} 
