react-scroll-to-bottom library added

--- a/src/containers/Messenger/Messenger.module.css
+++ b/src/containers/Messenger/Messenger.module.css
@@ -23,7 +23,7 @@
 .messagingSectionMessages{
       border: 1px solid red;
       height: 78%;
-      overflow-y: scroll;
+      overflow-y: hidden;
 }
 
 .navbarOfSidbarForMobile{
