--- a/src/components/UI/SidebarItem/SidebarItem.module.css
+++ b/src/components/UI/SidebarItem/SidebarItem.module.css
@@ -19,11 +19,8 @@
   background: #eeeeee;
 }
 
-.selectedChat, .selectedChat:hover{
-  background-color:  #009578;
+.selectedChat,
+.selectedChat:hover {
+  background-color: #009578;
   color: #ffffff;
 }
-
-
-
-
