--- a/src/components/ErrorMessage/ErrorMessage.module.css
+++ b/src/components/ErrorMessage/ErrorMessage.module.css
@@ -1,6 +1,5 @@
 .alertItemLogin {
   z-index: 0;
-  /* display: flex; */
   align-items: center;
   padding: 1rem 2rem;
   border-radius: 0.1rem;
@@ -12,19 +11,17 @@
 
 .warning {
   position: fixed;
-  transform: translate(-50%, -50%);
-  top: 80%;
-  left: 70%; 
+  top: 70%;
+  left: 50%;
+  width: 40%;
   background: #f8f3d6;
   color: #967132;
 }
 
-.alertItemLoginError{
+.alertItemLoginError {
   position: relative;
   width: 40%;
   top: 20%;
-  /* top: 80%;
-  left: 70%;  */
 }
 
 .inactiveLogin {
@@ -42,6 +39,7 @@
 
 .alertItemSendingMessage {
   position: relative;
+  top: -2rem;
   margin: 0 auto;
   width: 9rem;
   padding-top: 0.4rem;
@@ -53,7 +51,7 @@
   color: #ffffff;
   border-radius: 0.8rem;
   opacity: 1;
-  transition: all .5s ease;
+  transition: all 0.5s ease;
 }
 
 .inactiveAlertItemSendingMessage {
@@ -69,11 +67,13 @@
   color: #ffffff;
   border-radius: 0.8rem;
   opacity: 0;
-  transition: all .5s ease;
+  transition: all 0.1s ease;
   visibility: hidden;
 }
 
-
+.errorAddingContact {
+  top: 0rem;
+}
 
 .data {
   font-size: 1.1rem;
@@ -91,7 +91,7 @@
 .close {
   cursor: pointer;
   position: absolute;
-  top: .5rem;
+  top: 0.5rem;
   right: 1rem;
   font-size: 1.6rem;
 }
@@ -100,12 +100,20 @@
   color: #ce837d;
 }
 
- @media (max-width: 800px) {
-  .alertItemLoginError{
+@media (max-width: 800px) {
+  .alertItemLoginError {
     width: 80%;
   }
 
-  .alertItemLogin{
-    padding: 1rem .5rem;
+  .alertItemLogin {
+    padding: 1rem 0.5rem;
   }
-} 
+}
+
+@media (max-width: 450px) {
+  .warning {
+    top: 60%;
+    width: 60%;
+    left: 20%;
+  }
+}
