--- a/src/components/UI/ChatInputField/ChatInputField.module.css
+++ b/src/components/UI/ChatInputField/ChatInputField.module.css
@@ -1,18 +1,17 @@
 .inputSection {
   display: flex;
   align-items: center;
-  padding: .5rem 0rem .5rem .5rem;
+  padding: 0.5rem 0rem 0.5rem 0.5rem;
   position: fixed;
   bottom: 0%;
-  width: 70%;
+  width: 75%;
   background-color: #ffffff;
-  border: 2px solid blue;
 }
 
 .inputField {
   border: 0.1rem solid #eeeeee;
   border-radius: 0.8rem;
-  padding: 0.5rem 0.5rem 0.5rem .8rem; 
+  padding: 0.5rem 0.5rem 0.5rem 0.8rem;
   font-size: 0.8rem;
   width: 90%;
   outline: none;
@@ -20,7 +19,7 @@
 
 .sendButton {
   margin-left: 1rem;
-  color: #787878;;
+  color: #787878;
   font-size: 1.5rem;
   cursor: pointer;
   border: transparent;
@@ -33,4 +32,10 @@
 
 .sendButton:active {
   transform: scale(0.98);
+}
+
+@media (max-width: 770px) {
+  .inputSection {
+    width: 100%;
+  }
 }
